Fix bug broken UI title Fix bug broken UI button Fix bug update state wrong

--- a/src/components/handshakes/betting/Feed/Feed.scss
+++ b/src/components/handshakes/betting/Feed/Feed.scss
@@ -24,6 +24,7 @@
       margin-right: 5px;
       width: 80%;
       display: flex;
+      align-items: center;
     }
     .predictName {
       font-weight: 400;
